# IVI-Ecosystem-Whitepaper

./: .gitignore  CONTRIBUTIONS.md  LICENSE  Paper  README.md  pyproject.toml
src/ivi/: __init__.py  belief_alignment.py  database.py  decentralized_scoring.py  demo.py  ecosystem.py  events.py  firebase_utils.py  marketplace.py  philosophical_heuristics.py  redundancy.py  slearn.py  social_verification.py  token.py  traceability.py  usefulness.py  web.py
tests/: conftest.py  test_belief_alignment.py  test_database.py  test_ecosystem.py  test_firebase.py  test_marketplace.py  test_philosophical.py  test_realtime.py  test_reputation.py  test_scoring.py  test_slearn.py  test_token.py  test_traceability.py  test_usefulness.py  test_web.py
